@@ -1,0 +1,105 @@
+HETATM    1 CL16 336  3001     182.921 123.634  33.671  1.00 28.01          Cl
+HETATM    2  C1  336  3001     187.085 131.704  33.595  1.00 22.10           C
+HETATM    3  C4  336  3001     186.548 129.303  32.965  1.00 19.00           C
+HETATM    4  C6  336  3001     185.567 129.275  34.129  1.00 21.91           C
+HETATM    5  C9  336  3001     185.999 130.184  35.258  1.00 22.25           C
+HETATM    6  N12 336  3001     186.230 131.544  34.778  1.00 23.86           N
+HETATM    7  C13 336  3001     186.704 130.733  32.478  1.00 18.92           C
+HETATM    8  C17 336  3001     189.329 126.944  30.219  1.00 25.78           C
+HETATM    9  C19 336  3001     183.856 124.974  33.135  1.00 20.45           C
+HETATM   10  C20 336  3001     185.210 125.090  33.479  1.00 18.87           C
+HETATM   11  C22 336  3001     187.399 126.334  33.402  1.00 22.96           C
+HETATM   12  C25 336  3001     188.257 125.994  32.237  1.00 22.85           C
+HETATM   13  C28 336  3001     183.973 127.057  31.900  1.00 21.76           C
+HETATM   14  C29 336  3001     189.449 127.837  29.154  1.00 27.24           C
+HETATM   15  C30 336  3001     188.480 128.838  29.003  1.00 27.14           C
+HETATM   16  N32 336  3001     187.464 128.931  29.864  1.00 22.78           N
+HETATM   17  C33 336  3001     186.111 128.357  31.766  1.00 22.00           C
+HETATM   18  C35 336  3001     183.244 125.951  32.348  1.00 21.67           C
+HETATM   19  C39 336  3001     187.314 128.081  30.904  1.00 22.62           C
+HETATM   20  C40 336  3001     185.335 127.179  32.240  1.00 19.93           C
+HETATM   21  C41 336  3001     188.268 127.042  31.122  1.00 23.46           C
+HETATM   22  C42 336  3001     185.943 126.193  33.031  1.00 20.91           C
+HETATM   23  C43 336  3001     185.619 136.469  35.162  1.00 24.38           C
+HETATM   24  C46 336  3001     185.527 137.585  36.203  1.00 24.18           C
+HETATM   25  C49 336  3001     185.785 135.094  35.809  1.00 24.79           C
+HETATM   26  C51 336  3001     186.882 135.078  36.870  1.00 23.49           C
+HETATM   27  N54 336  3001     186.624 137.463  37.164  1.00 27.85           N
+HETATM   28  C55 336  3001     187.507 138.467  37.390  1.00 31.96           C
+HETATM   29  N56 336  3001     188.420 138.108  38.305  1.00 35.63           N
+HETATM   30  O57 336  3001     187.500 139.572  36.848  1.00 36.41           O
+HETATM   31  C58 336  3001     186.726 136.187  37.862  1.00 26.00           C
+HETATM   32  C61 336  3001     185.996 133.964  34.806  1.00 25.07           C
+HETATM   33  O64 336  3001     184.954 132.504  36.398  1.00 27.86           O
+HETATM   34  C65 336  3001     185.673 132.596  35.410  1.00 24.14           C
+HETATM   35 BR37 336  3001     190.902 127.677  27.955  1.00 27.04          Br
+HETATM   36 BR38 336  3001     183.097 128.363  30.838  1.00 28.00          Br
+CONECT    1    9
+CONECT    2    6    7
+CONECT    3    4    7   17
+CONECT    4    3    5
+CONECT    5    4    6
+CONECT    6    2    5   34
+CONECT    7    2    3
+CONECT    8   14
+CONECT    8   21
+CONECT    8   21
+CONECT    9    1   10
+CONECT    9   18
+CONECT    9   18
+CONECT   10    9
+CONECT   10   22
+CONECT   10   22
+CONECT   11   12   22
+CONECT   12   11   21
+CONECT   13   18
+CONECT   13   20
+CONECT   13   20
+CONECT   13   36
+CONECT   14    8
+CONECT   14   15
+CONECT   14   15
+CONECT   14   35
+CONECT   15   14
+CONECT   15   14
+CONECT   15   16
+CONECT   16   15
+CONECT   16   19
+CONECT   16   19
+CONECT   17    3   19   20
+CONECT   18    9
+CONECT   18    9
+CONECT   18   13
+CONECT   19   16
+CONECT   19   16
+CONECT   19   17   21
+CONECT   20   13
+CONECT   20   13
+CONECT   20   17   22
+CONECT   21    8
+CONECT   21    8
+CONECT   21   12   19
+CONECT   22   10
+CONECT   22   10
+CONECT   22   11   20
+CONECT   23   24   25
+CONECT   24   23   27
+CONECT   25   23   26   32
+CONECT   26   25   31
+CONECT   27   24   28   31
+CONECT   28   27   29
+CONECT   28   30
+CONECT   28   30
+CONECT   29   28
+CONECT   30   28
+CONECT   30   28
+CONECT   31   26   27
+CONECT   32   25   34
+CONECT   33   34
+CONECT   33   34
+CONECT   34    6   32
+CONECT   34   33
+CONECT   34   33
+CONECT   35   14
+CONECT   36   13
+END
